chore: Update dependency